# littleb

./: .clang-format  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  makefile
api/: device.h  device.hpp  devicemanager.h  devicemanager.hpp  littleb.h  littleb.hpp  littlebtypes.h  littlebtypes.hpp
cmake/modules/: FindSystemd.cmake  OpenCVDetectPython.cmake
examples/: CMakeLists.txt  README.md  arduino_example_py2.py  esp_littleb.c  hello_littleb.c  littleb_base_example.cpp  littleb_heartrate_example.c  littleb_notifications.c  littleb_notifications_example.c  littleb_sensor_tag_example.c  sensor_example_py2.py  sensor_tag_example.c  unit_testing_py2.py  unit_testing_py3.py  zephyr_on_arduino_example.c
include/: littleb.h  littleb_internal.h  littleb_internal_types.h  version.h
src/: CMakeLists.txt  device.cpp  devicemanager.cpp  hello_littleb.c  littleb.c  littleb.pc.cmake  littlebtypes.cpp  sdbus-client.c
src/wrappers/: CMakeLists.txt
src/wrappers/nbind/: CMakeLists.txt  async_example.js
src/wrappers/swig/: CMakeLists.txt  littleb.i  python_cpp_cb_connect.hpp
src/wrappers/swig/python2/: CMakeLists.txt
src/wrappers/swig/python3/: CMakeLists.txt
wrappers/: README.md
wrappers/nbind/: CMakeLists.txt  async_example.js  binding.gyp  example.js  make_lib.sh  nbind_classes.h  package.json  v8_cpp_connect.hpp
wrappers/nbind/testing/: example.cpp  example.h  example.js  make_lib.sh
wrappers/python-swig/: make_libs.sh
wrappers/python-swig/python2/: arduino_example.py  littleb_wrap.cxx  python2_littleb.sh  sensor_example.py  setup2.py  unit_testing.py
wrappers/python-swig/python3/: littleb.py  python3_littleb.sh  setup3.py  unit_testing.py
wrappers/python_swig/: littleb.i  python_cpp_cb_connect.hpp
wrappers/python_swig/python2/: CMakeLists.txt
wrappers/python_swig/python3/: CMakeLists.txt
