add_executable (hellolittleb hello_littleb.c)
add_executable (littlebnotifications littleb_notifications.c)
add_executable (littleb_base_example littleb_base_example.cpp)
include_directories(${PROJECT_SOURCE_DIR}/api)
target_link_libraries (hellolittleb littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
target_link_libraries (littlebnotifications littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
target_link_libraries (littleb_base_example littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
install (DIRECTORY ${PROJECT_SOURCE_DIR}/examples/ DESTINATION ${CMAKE_INSTALL_DATADIR}/littleb/examples)
