add_executable (hellolittleb hello_littleb.c)
add_executable (littlebnotifications littleb_notifications.c)
add_executable (sensortagexample sensor_tag_example.c)
add_executable (zephyronarduinoexample zephyr_on_arduino_example.c)
add_executable (littlebbaseexample littleb_base_example.cpp)
include_directories(${PROJECT_SOURCE_DIR}/api)
target_link_libraries (hellolittleb littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
target_link_libraries (littlebnotifications littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
target_link_libraries (sensortagexample littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
target_link_libraries (zephyronarduinoexample littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
target_link_libraries (littlebbaseexample littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
install (DIRECTORY ${PROJECT_SOURCE_DIR}/examples/ DESTINATION ${CMAKE_INSTALL_DATADIR}/littleb/examples)
