add_executable (hellolittleb hello_littleb.c)
add_executable (littlebnotificationsexample littleb_notifications_example.c)
add_executable (littlebsensortagexample littleb_sensor_tag_example.c)
add_executable (littlebheartrateexample littleb_heartrate_example.c)
add_executable (littlebbaseexample littleb_base_example.cpp)
include_directories(${PROJECT_SOURCE_DIR}/api)
target_link_libraries (hellolittleb littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
target_link_libraries (littlebnotificationsexample littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
target_link_libraries (littlebsensortagexample littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
target_link_libraries (littlebheartrateexample littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
target_link_libraries (littlebbaseexample littleb ${CMAKE_THREAD_LIBS_INIT} ${SYSTEMD_LIBRARIES})
install (DIRECTORY ${PROJECT_SOURCE_DIR}/examples/ DESTINATION ${CMAKE_INSTALL_DATADIR}/littleb/samples)
